# research-project

./: docker-compose.yaml
newsbot/: .gitignore  chatbot.py  docker-compose.yaml  main.py  news_urls.csv  pyproject.toml  test.py
